[gd_scene load_steps=5 format=3 uid="uid://bvk8j3nluwxy0"]

[ext_resource type="Script" uid="uid://cfwl013hp8iqm" path="res://Skripts/ui/level_button.gd" id="1_level_button"]
[ext_resource type="StyleBox" uid="uid://c4l6klwn0qfpn" path="res://Themes/ui/button_pressed.tres" id="3_r84b0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vl2qb"]
bg_color = Color(0, 0.728381, 0.0239329, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c3pmm"]
bg_color = Color(8.66354e-07, 0.722658, 0.278397, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[node name="LevelButton" type="VBoxContainer"]
custom_minimum_size = Vector2(20, 40)
offset_right = 107.0
offset_bottom = 52.0
script = ExtResource("1_level_button")

[node name="MainButton" type="Button" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxFlat_vl2qb")
theme_override_styles/pressed = ExtResource("3_r84b0")
theme_override_styles/normal = SubResource("StyleBoxFlat_c3pmm")
text = "1"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1
